using different base64 library for java 7